# DKV-Storage

./: .gitignore  CMakeLists.txt  DKV-Storage.sln  DKV-Storage.vcxproj
scripts/: killDKV.bat  startDKV.bat
src/: main.cpp
src/api/internal/: ReplicationHttpHandler.cpp  ReplicationHttpHandler.h  ReplicationRouteRegistrar.cpp  ReplicationRouteRegistrar.h  Routes.h
src/api/public/: PublicHttpHandler.cpp  PublicHttpHandler.h  PublicRouteRegistrar.cpp  PublicRouteRegistrar.h  Routes.h
src/app/: App.cpp  App.h
src/cluster/protocol/: JsonSerializer.cpp  JsonSerializer.h  MessageType.h  ReplicationMessage.h
src/cluster/replication/: Peer.h  ReplicationClient.cpp  ReplicationClient.h
src/cluster/service/: ReplicationService.cpp  ReplicationService.h
src/config/: AppConfig.h
src/http/: HttpConstants.h  HttpMethodHandler.cpp  HttpMethodHandler.h  HttpServer.cpp  HttpServer.h  RoutesRegistrar.cpp  RoutesRegistrar.h
src/http/adapters/: HttplibRequestAdapter.cpp  HttplibRequestAdapter.h  HttplibResponseAdapter.cpp  HttplibResponseAdapter.h
src/interfaces/: IHttpServer.h  IReplicationClient.h  IRequest.h  IResponse.h
src/server/: HttpServer.cpp  HttpServer.h
src/service/: KeyValueService.cpp  KeyValueService.h
src/storage/: KeyValueService.cpp  KeyValueService.h  KeyValueStorage.cpp  KeyValueStorage.h
src/store/: KeyValueStorage.cpp  KeyValueStorage.h
tests/: CMakeLists.txt
tests/mock/: MockHttpServer.h  MockReplicationClient.h  MockRequest.h  MockResponse.h
tests/unit/: test_AppConfig.cpp  test_HttpMethodHandler.cpp  test_KeyValueService.cpp  test_KeyValueStorage.cpp  test_ReplicationHandler.cpp  test_ReplicationRouteRegistrar.cpp  test_RouteRegistar.cpp
